--- a/CNN.ipynb
+++ b/CNN.ipynb
@@ -34,13 +34,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "import torchvision\n",
-    "import torchvision.transforms as transforms"
+    "import torchvision.transforms as transforms\n",
+    "import torch.nn as nn"
    ]
   },
   {
@@ -793,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -810,7 +811,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cat\n"
+      "cat\n",
+      "torch.Size([3, 32, 32])\n"
      ]
     }
    ],
@@ -822,14 +824,212 @@
     "# Show Image\n",
     "\n",
     "imgShow(images[imageIdx])\n",
-    "print(classes[labels[imageIdx]]) #Its a number"
+    "print(classes[labels[imageIdx]]) #Its a number\n",
+    "\n",
+    "print(images[imageIdx].shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Defining the Neural Network"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Define model\n",
+    "# init: define layers\n",
+    "# forward: data flows through the model\n",
+    "\n",
+    "class CNN(nn.Module):\n",
+    "\n",
+    "    # Define init method\n",
+    "    def __init__(self, hidden_layer = 100):\n",
+    "        super().__init__()\n",
+    "\n",
+    "\n",
+    "        # Conv 1\n",
+    "        # input channels, output channels(feature map)/ no. of filters(6 diff. filters), kernel/filter size\n",
+    "        self.conv1 = nn.Conv2d(3, 6, 5)\n",
+    "\n",
+    "        # Pooling Layer\n",
+    "        # kernel size, stride, \n",
+    "        self.pool = nn.MaxPool2d(2, 2)\n",
+    "\n",
+    "        # Flatten\n",
+    "\n",
+    "        # Fully connected layer\n",
+    "        # input dimension(we select 10 arbitarily), output dimension\n",
+    "        # The input image was 32x32 but due to Conv2D and MaxPool2D it has different and lower dimensions\n",
+    "        self.fc1 = nn.Linear(1176, hidden_layer) #1st parameter - After Pooling\n",
+    "\n",
+    "        #Output layer\n",
+    "        #Output dimension 10 - because 10 outputs\n",
+    "        self.out = nn.Linear(hidden_layer, 10)\n",
+    "\n",
+    "\n",
+    "        # For Convolution layer and Fully connected layer we have ReLU activation\n",
+    "\n",
+    "        # activation function\n",
+    "        self.act = nn.ReLU()\n",
+    "\n",
+    "\n",
+    "    # Define forward method\n",
+    "    def forward(self, x):\n",
+    "\n",
+    "        # Print the shape of the input data\n",
+    "        print('Inside Forward, before conv1: ', x.shape)\n",
+    "\n",
+    "        # Convolution 1\n",
+    "        # For each feature map we need to add activation function\n",
+    "        x = self.act(self.conv1(x))\n",
+    "        \n",
+    "        # Different dimension because of feature map\n",
+    "        print('After conv1: ', x.shape)\n",
+    "\n",
+    "        # Pooling layer\n",
+    "        x = self.pool(x)\n",
+    "\n",
+    "        print('After Pooling(Pooling for 6 diff. feature map): ', x.shape)\n",
+    "\n",
+    "\n",
+    "        # Flattening\n",
+    "        # [batch size, multiplication of dimensions]\n",
+    "        # view - change the shape only\n",
+    "        x = x.view(-1, 6*14*14) # 2nd parameter - After Pooling\n",
+    "\n",
+    "        print(x.shape) # Now we know the input to the Fully Connected Layer\n",
+    "\n",
+    "\n",
+    "        # Fc1\n",
+    "        x = self.act(self.fc1(x))\n",
+    "\n",
+    "        print(x.shape)\n",
+    "\n",
+    "\n",
+    "        # Output Layer\n",
+    "\n",
+    "        x = self.out(x)\n",
+    "\n",
+    "\n",
+    "        print(x.shape)\n",
+    "\n",
+    "        # Return Output\n",
+    "        return x\n",
+    "\n",
+    "        \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CNN(\n",
+      "  (conv1): Conv2d(3, 6, kernel_size=(5, 5), stride=(1, 1))\n",
+      "  (pool): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "  (fc1): Linear(in_features=1176, out_features=100, bias=True)\n",
+      "  (out): Linear(in_features=100, out_features=10, bias=True)\n",
+      "  (act): ReLU()\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define Model\n",
+    "\n",
+    "model = CNN() \n",
+    "\n",
+    "print(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inside Forward, before conv1:  torch.Size([128, 3, 32, 32])\n",
+      "After conv1:  torch.Size([128, 6, 28, 28])\n",
+      "After Pooling(Pooling for 6 diff. feature map):  torch.Size([128, 6, 14, 14])\n",
+      "torch.Size([128, 1176])\n",
+      "torch.Size([128, 100])\n",
+      "torch.Size([128, 10])\n",
+      "Inside Forward, before conv1:  torch.Size([128, 3, 32, 32])\n",
+      "After conv1:  torch.Size([128, 6, 28, 28])\n",
+      "After Pooling(Pooling for 6 diff. feature map):  torch.Size([128, 6, 14, 14])\n",
+      "torch.Size([128, 1176])\n",
+      "torch.Size([128, 100])\n",
+      "torch.Size([128, 10])\n",
+      "Image shape - output from Model:  torch.Size([128, 10])\n",
+      "tensor([[ 0.0335,  0.0595, -0.0407,  ..., -0.0999,  0.0854, -0.1870],\n",
+      "        [-0.0264,  0.0710, -0.0003,  ..., -0.1499,  0.1077, -0.1392],\n",
+      "        [-0.0469,  0.0910, -0.0235,  ..., -0.0890,  0.0312, -0.0628],\n",
+      "        ...,\n",
+      "        [-0.0119,  0.0660,  0.0023,  ..., -0.1863,  0.0254, -0.1278],\n",
+      "        [ 0.0498,  0.0566, -0.0198,  ..., -0.0901,  0.1394, -0.1976],\n",
+      "        [-0.0762,  0.0964,  0.0144,  ..., -0.0643, -0.0216, -0.1008]],\n",
+      "       grad_fn=<AddmmBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Call Iter method\n",
+    "dataIter = iter(trainLoader)\n",
+    "\n",
+    "# Get first item\n",
+    "images, labels = dataIter.__next__()\n",
+    "\n",
+    "#print(images.shape)\n",
+    "\n",
+    "# Pass mini batch to forward pass of model\n",
+    "test = model.forward(images)\n",
+    "\n",
+    "print(\"Image shape - output from Model: \", model.forward(images).shape)\n",
+    "\n",
+    "print(test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([128, 10])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(test.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Define Cost Function and Optimizer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
