--- a/CNN.ipynb
+++ b/CNN.ipynb
@@ -2,22 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib notebook"
+    "from sklearn.metrics import accuracy_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pip install matplotlib"
+    "#pip install matplotlib\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pip install scikit-learn"
    ]
   },
   {
@@ -3398,7 +3407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -3414,7 +3423,7 @@
     {
      "data": {
       "text/html": [
-       "<div id='2f13d7c1-2614-41c8-9954-32addcb21256'></div>"
+       "<div id='b86882fb-7f11-4662-ad7c-4a4e83202e02'></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -3428,15 +3437,50 @@
      "output_type": "stream",
      "text": [
       "Epoch 0\n",
+      "Train loss:  0.0058735262203216555\n",
+      "Valid loss:  2.2281718254089355e-05\n",
+      "Metric Valid 0.015625\n",
       "Epoch 1\n",
+      "Train loss:  0.0056601914876699445\n",
+      "Valid loss:  1.934881567955017e-05\n",
+      "Metric Valid 0.01875\n",
       "Epoch 2\n",
+      "Train loss:  0.005483639006018639\n",
+      "Valid loss:  1.7593837976455687e-05\n",
+      "Metric Valid 0.01875\n",
       "Epoch 3\n",
-      "Epoch 4\n"
+      "Train loss:  0.005316205010414124\n",
+      "Valid loss:  1.6684330701828004e-05\n",
+      "Metric Valid 0.021875\n",
+      "Epoch 4\n",
+      "Train loss:  0.005159020947813988\n",
+      "Valid loss:  2.1075072288513182e-05\n",
+      "Metric Valid 0.01875\n",
+      "Epoch 5\n",
+      "Train loss:  0.004996102888584137\n",
+      "Valid loss:  1.8429213762283325e-05\n",
+      "Metric Valid 0.01875\n",
+      "Epoch 6\n",
+      "Train loss:  0.004847770879268646\n",
+      "Valid loss:  1.579110026359558e-05\n",
+      "Metric Valid 0.021875\n",
+      "Epoch 7\n",
+      "Train loss:  0.004711990997195244\n",
+      "Valid loss:  2.0727732181549073e-05\n",
+      "Metric Valid 0.021875\n",
+      "Epoch 8\n",
+      "Train loss:  0.004536701757311821\n",
+      "Valid loss:  1.829604148864746e-05\n",
+      "Metric Valid 0.015625\n",
+      "Epoch 9\n",
+      "Train loss:  0.004392528594732285\n",
+      "Valid loss:  1.7124853134155274e-05\n",
+      "Metric Valid 0.01875\n"
      ]
     }
    ],
    "source": [
-    "epochs = 5\n",
+    "epochs = 10\n",
     "\n",
     "# train loss array\n",
     "trainLossArray = np.zeros(shape = (epochs))\n",
@@ -3497,16 +3541,127 @@
     "        epoch_train_loss += loss.item() \n",
     "\n",
     "    # add loss value of the itteration\n",
-    "    trainLossArray[i] = epoch_train_loss / 5000 # Average loss\n",
+    "    #trainLossArray[i] = epoch_train_loss / 50000 # Average loss\n",
+    "    \n",
+    "    print(\"Train loss: \", epoch_train_loss / 50000 )\n",
     "\n",
-    "    print(trainLossArray[i])\n",
+    "    # Validation\n",
     "\n",
+    "    epoch_valid_loss = 0\n",
+    "\n",
+    "    metric_valid = 0\n",
+    "\n",
+    "    batch_counter = 0\n",
+    "    \n",
+    "    for tmp in validLoader:\n",
+    "\n",
+    "        labelsVal = tmp[1]\n",
+    "        dataVal = tmp[0]\n",
+    "\n",
+    "        # get predictions\n",
+    "        predictionsVal = model.forward(dataVal)\n",
+    "\n",
+    "        # get cost function value\n",
+    "\n",
+    "        lossVal = costFunction(predictionsVal, labelsVal)\n",
+    "\n",
+    "        epoch_valid_loss = lossVal.item()\n",
+    "\n",
+    "        batch_counter += 1\n",
+    "\n",
+    "    print(\"Valid loss: \", epoch_valid_loss / 50000 )\n",
+    "\n",
+    "\n",
+    "    # Compute metric value in mini batch\n",
+    "    metric_valid += accuracy_score(\n",
+    "         \n",
+    "         # True values\n",
+    "         labelsVal,\n",
+    "\n",
+    "         # Prediction Values\n",
+    "         torch.argmax(predictionsVal, 1).detach().numpy()\n",
+    "    )\n",
+    "    \n",
+    "\n",
+    "    print(\"Metric Valid\", metric_valid/batch_counter)\n",
     "    # PLOT\n",
     "\n",
-    "    ax[0].plot(trainLossArray[0:i], c = \"red\")\n",
+    "    # ax[0].plot(trainLossArray[0:i], c = \"red\")\n",
     "\n",
-    "    fig.canvas.draw()\n",
+    "    # fig.canvas.draw()\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test Dataset and Get Metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([128, 10])\n",
+      "torch.Size([128, 10])\n",
+      "torch.Size([128, 10])\n",
+      "torch.Size([128, 10])\n",
+      "torch.Size([128, 10])\n",
+      "torch.Size([128, 10])\n",
+      "torch.Size([128, 10])\n",
+      "torch.Size([128, 10])\n",
+      "torch.Size([128, 10])\n",
+      "torch.Size([128, 10])\n",
+      "torch.Size([128, 10])\n",
+      "torch.Size([128, 10])\n",
+      "torch.Size([128, 10])\n",
+      "torch.Size([128, 10])\n",
+      "torch.Size([128, 10])\n",
+      "torch.Size([128, 10])\n",
+      "torch.Size([128, 10])\n",
+      "torch.Size([128, 10])\n",
+      "torch.Size([128, 10])\n",
+      "torch.Size([128, 10])\n",
+      "torch.Size([128, 10])\n",
+      "torch.Size([128, 10])\n",
+      "torch.Size([128, 10])\n",
+      "torch.Size([128, 10])\n",
+      "torch.Size([128, 10])\n",
+      "torch.Size([128, 10])\n",
+      "torch.Size([128, 10])\n",
+      "torch.Size([128, 10])\n",
+      "torch.Size([128, 10])\n",
+      "torch.Size([128, 10])\n",
+      "torch.Size([128, 10])\n",
+      "torch.Size([128, 10])\n",
+      "torch.Size([128, 10])\n",
+      "torch.Size([128, 10])\n",
+      "torch.Size([128, 10])\n",
+      "torch.Size([128, 10])\n",
+      "torch.Size([128, 10])\n",
+      "torch.Size([128, 10])\n",
+      "torch.Size([128, 10])\n",
+      "torch.Size([8, 10])\n"
+     ]
+    }
+   ],
+   "source": [
+    "for tmp in testLoader:\n",
+    "\n",
+    "\n",
+    "    data = tmp[0]\n",
+    "    labels = tmp[1]\n",
+    "\n",
+    "    predictions = model.forward(data)\n",
+    "\n",
+    "\n",
+    "    print(predictions.shape)"
    ]
   },
   {
